eosiojavaabieos/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_abieos-lib_armeabi-v7a.stdout.txt
ninja: Entering directory `/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/.cxx/cmake/debug/armeabi-v7a'
[1/3] Building CXX object CMakeFiles/abieos-lib.dir/abieos-lib.cpp.o
[2/3] Building CXX object CMakeFiles/abieos-lib.dir/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp.o
FAILED: CMakeFiles/abieos-lib.dir/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp.o 
/Users/jon.lamarr/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=armv7-none-linux-androideabi21 --gcc-toolchain=/Users/jon.lamarr/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64 --sysroot=/Users/jon.lamarr/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64/sysroot  -Dabieos_lib_EXPORTS -I/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/include -I/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include -I/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/external/rapidjson/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -std=c++17 -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/abieos-lib.dir/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp.o -MF CMakeFiles/abieos-lib.dir/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp.o.d -o CMakeFiles/abieos-lib.dir/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp.o -c /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp:4:
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.hpp:7:
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/from_json.hpp:442:25: error: __int128 is not supported on this target
void from_json(unsigned __int128& result, S& stream) {
                        ^
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/from_json.hpp:472:16: error: __int128 is not supported on this target
void from_json(__int128& result, S& stream) {
               ^
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp:4:
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.hpp:10:
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/to_json.hpp:7:
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/types.hpp:24:37: error: __int128 is not supported on this target
constexpr const char* get_type_name(__int128*) { return "int128"; }
                                    ^
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/types.hpp:25:46: error: __int128 is not supported on this target
constexpr const char* get_type_name(unsigned __int128*) { return "uint128"; }
                                             ^
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp:4:
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.hpp:10:
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/to_json.hpp:134:45: error: __int128 is not supported on this target
template <typename S> void to_json(unsigned __int128 value, S& stream) { return int_to_json(value, stream); }
                                            ^
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/to_json.hpp:140:36: error: __int128 is not supported on this target
template <typename S> void to_json(__int128 value, S& stream) { return int_to_json(value, stream); }
                                   ^
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp:4:
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.hpp:16:
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/asset.hpp:160:7: error: __int128 is not supported on this target
      __int128 tmp = (__int128)amount * (__int128)a;
      ^
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/asset.hpp:160:23: error: __int128 is not supported on this target
      __int128 tmp = (__int128)amount * (__int128)a;
                      ^
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/eosiojavaabieos/src/main/cpp/../../../../abieos/include/eosio/asset.hpp:160:42: error: __int128 is not supported on this target
      __int128 tmp = (__int128)amount * (__int128)a;
                                         ^
In file included from /Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.cpp:4:
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.hpp:375:26: error: __int128 is not supported on this target
using uint128 = unsigned __int128;
                         ^
/Users/jon.lamarr/Desktop/Dev/eosio-java-android-abieos-serialization-provider/abieos/src/abieos.hpp:376:16: error: __int128 is not supported on this target
using int128 = __int128;
               ^
11 errors generated.
ninja: build stopped: subcommand failed.
